config(ws-service): 配置WebSocket服务应用名称和生产环境配置
- 添加spring应用名称配置为ws-proxy-service
- 配置生产环境配置文件导入路径
- 设置默认激活配置文件为prod
- 优化WsClientManager代码格式化和空行清理

--- a/ws-service/src/main/resources/application.yml
+++ b/ws-service/src/main/resources/application.yml
@@ -1,3 +1,12 @@
+spring:
+  application:
+    name: ws-proxy-service
+  config:
+    import:
+      - optional:file:./application-prod.yml
+  profiles:
+    active: prod
+
 api:
   authorization: token
   common:
