feat(ws-service): 添加消息控制器路由配置和WebSocket代理功能
- 在MessageController中添加/api/和/jwt/路由映射
- 配置Swagger分组配置以支持不同API路径
- 添加Main类实现WebSocket消息发送功能
- 创建WsProxy域对象用于消息代理
- 集成HttpUtil和JSONUtil进行HTTP请求处理
- 实现WebSocket连接和消息发送逻辑

--- a/framework-knife4j/src/main/resources/application.yml
+++ b/framework-knife4j/src/main/resources/application.yml
@@ -49,7 +49,7 @@ knife4j:
     enable-dynamic-parameter: true
   #swagger
   basic:
-    enable: true
+    enable: false
     username: root
     password: root
 
