config(ws): 配置WebSocket服务端口和上下文路径
- 设置服务器端口为8081和上下文路径为/ws-proxy
- 在生产环境配置中添加WebSocket相关配置
- 禁用Swagger基本认证功能
- 将主类移至测试目录并更新注释说明

--- a/ws-service/src/main/resources/application.yml
+++ b/ws-service/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+server:
+  servlet:
+      context-path: /ws-proxy
+  port: 8081
+
 spring:
   application:
     name: ws-proxy-service
@@ -57,6 +62,6 @@ knife4j:
     enable-dynamic-parameter: true
   #swagger
   basic:
-    enable: true
+    enable: false
     username: root
     password: root
