chore(ci): 更新构建工作流默认配置
- 将默认JAVA版本从17改为8
- 将JAR目录前缀从micro-service改为ws-service

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,8 +68,8 @@ jobs:
         run: |
           TAG_NAME="${{ github.event.inputs.tag_name || github.ref_name }}"
           SKIP_TESTS="${{ github.event.inputs.skip_tests || true }}"
-          JAVA_VERSION="${{ github.event.inputs.java_version ||secrets.JAVA_VERSION|| '17' }}"
-          JAR_DIR_PREFIX="${{ github.event.inputs.jar_dir_prefix || 'micro-service' }}"
+          JAVA_VERSION="${{ github.event.inputs.java_version ||secrets.JAVA_VERSION|| '8' }}"
+          JAR_DIR_PREFIX="${{ github.event.inputs.jar_dir_prefix || 'ws-service' }}"
           DRAFT="${{ github.event.inputs.draft || false }}"
           PRERELEASE="${{ github.event.inputs.prerelease || false }}"
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
