chore(workflow): 修改 Docker 构建和推送工作流触发条件
- 将 workflow_run 的触发类型从 completed 改为 success
- 确保仅在 Java Jar To Zip Publish 工作流成功完成时触发 Docker 构建

--- a/.github/workflows/Docker Build and Push.yml
+++ b/.github/workflows/Docker Build and Push.yml
@@ -3,7 +3,7 @@ name: Docker Build and Push
 on:
   workflow_run:
     workflows: ["Java Jar To Zip Publish"]
-    types: [completed]
+    types: [success]
   # 也可以手动触发
   workflow_dispatch:
     inputs:
