--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -114,6 +114,10 @@ jobs:
             mvn clean package -B -Dquickly
           fi
           echo "Maven 构建完成"
+          echo "匹配的 JAR 文件 (*/target/*.jar):"
+          find . -type f -path "*/target/*.jar"
+          echo "匹配的 JAR 文件 (*/${{ env.JAR_DIR_PREFIX  }}/target/*.jar):"
+          find . -type f -path "*/${{ env.JAR_DIR_PREFIX  }}/target/*.jar" || echo "未找到匹配的 JAR 文件"
 
       - name: 8.列出匹配的 JAR 文件
         run: |
@@ -121,8 +125,8 @@ jobs:
             echo "匹配的 JAR 文件 (*/target/*.jar):"
             find . -type f -path "*/target/*.jar" || echo "未找到匹配的 JAR 文件"
           else
-            echo "匹配的 JAR 文件 (*/${{ env.JAR_DIR_PREFIX  }}/*/target/*.jar):"
-            find . -type f -path "*/${{ env.JAR_DIR_PREFIX  }}/*/target/*.jar" || echo "未找到匹配的 JAR 文件"
+            echo "匹配的 JAR 文件 (*/${{ env.JAR_DIR_PREFIX  }}/target/*.jar):"
+            find . -type f -path "*/${{ env.JAR_DIR_PREFIX  }}/target/*.jar" || echo "未找到匹配的 JAR 文件"
           fi
 
       - name: 9.打包所有 JAR 文件成 ZIP
@@ -130,7 +134,7 @@ jobs:
           if [ "${{ env.JAR_DIR_PREFIX }}" = "" ]; then
             find . -type f -path "*/target/*.jar" -exec zip -j jars-${{ env.TAG_NAME }}.zip {} +
           else
-            find . -type f -path "*/${{ env.JAR_DIR_PREFIX  }}/*/target/*.jar" -exec zip -j jars-${{ env.TAG_NAME }}.zip {} +
+            find . -type f -path "*/${{ env.JAR_DIR_PREFIX  }}/target/*.jar" -exec zip -j jars-${{ env.TAG_NAME }}.zip {} +
           fi
           # -j: 仅打包文件，不保留目录结构
           # +: 尽量将多个文件放入一个 zip 命令，减少调用次数
