chore(workflow): 更新工作流触发条件
- 将 workflow_run 类型从 success 改为 completed
- 添加注释说明触发时机为工作流完成时

--- a/.github/workflows/Docker Build and Push.yml
+++ b/.github/workflows/Docker Build and Push.yml
@@ -3,7 +3,8 @@ name: Docker Build and Push
 on:
   workflow_run:
     workflows: ["Java Jar To Zip Publish"]
-    types: [success]
+    types:
+      - completed  # 当工作流完成时触发]
   # 也可以手动触发
   workflow_dispatch:
     inputs:
