fix(ci): 修复GitHub Release工作流配置
- 修正了上传ZIP文件到GitHub Release的步骤配置
- 更新了发布名称格式以正确显示版本信息
- 确保了发布标签和文件的正确关联

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -156,11 +156,11 @@ jobs:
       - name: 12.上传 ZIP 到 GitHub Release
         uses: softprops/action-gh-release@v2
         with:
+          name: jar-files
           files: |
             jars-${{ env.TAG_NAME }}.zip
             extracted-jars/*.jar
           tag_name: ${{ env.TAG_NAME }}
-          name: Release ${{ env.TAG_NAME }} ${{ env.DRAFT == true && '(Draft)' || '' }} ${{ env.PRERELEASE == true && '(Pre-release)' || '' }}
           body: |
             **Release 信息**
             - 标签: ${{ env.TAG_NAME }}
