chore(workflow): 修改Docker构建工作流触发条件
- 将触发条件从completed改为success
- 注释掉completed触发选项以避免重复触发

--- a/.github/workflows/Docker Build and Push.yml
+++ b/.github/workflows/Docker Build and Push.yml
@@ -4,7 +4,8 @@ on:
   workflow_run:
     workflows: ["Java Jar To Zip Publish"]
     types:
-      - completed  # 当工作流完成时触发]
+      - success  # 当工作流成功时触发
+#      - completed  # 当工作流完成时触发]
   # 也可以手动触发
   workflow_dispatch:
     inputs:
