--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <!--    <packaging>pom</packaging>-->
 
     <properties>
-        <project-module.version>0.0.1-SNAPSHOT</project-module.version>
+        <project-module.version>v0.0.1</project-module.version>
         <revision>${project-module.version}</revision>
 
         <java.version>8</java.version>
