--- a/.github/workflows/Docker Build and Push.yml
+++ b/.github/workflows/Docker Build and Push.yml
@@ -4,6 +4,7 @@ on:
   workflow_run:
     workflows: ["Java Jar To Zip Publish"]
     types:
+#      - success  # 当工作流成功时触发
       - completed  # 当工作流完成时触发]
   # 也可以手动触发
   workflow_dispatch:
