fix(ci): 修复发布工作流中的文件上传配置
- 将 GitHub Release 的名称从硬编码的 'jar-files' 改为动态的环境变量 '${{ env.TAG_NAME }}'
- 添加了新的 artifact 上传步骤，确保 JAR 文件能够作为构件保存
- 保持了原有的 ZIP 文件上传功能，同时增加 JAR 文件的独立上传机制

(cherry picked from commit 4aa660dcace882033cdcb9e94f357e3c500d01ee)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -156,7 +156,7 @@ jobs:
       - name: 12.上传 ZIP 到 GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          name: jar-files
+          name: ${{ env.TAG_NAME }}
           files: |
             jars-${{ env.TAG_NAME }}.zip
             extracted-jars/*.jar
@@ -172,3 +172,9 @@ jobs:
           prerelease: ${{ env.PRERELEASE == true || false }}
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
+      # 在步骤 12 之后添加新的 artifact 上传步骤
+      - name: Upload JAR files as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: jar-files
+          path: extracted-jars/*.jar
