fix(ci): 修复Docker构建工作流中的文件路径配置
- 修正了下载构件的路径从 ./target 改为 ./
- 更新了列出下载文件的命令路径
- 修改了Docker构建参数中的JAR文件路径配置
- 确保构件下载和构建过程能够正确匹配文件位置

--- a/.github/workflows/Docker Build and Push.yml
+++ b/.github/workflows/Docker Build and Push.yml
@@ -40,10 +40,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: jar-files
-          path: ./target
+          path: ./
 
       - name: List downloaded files
-        run: ls -la ./target/
+        run: ls -la ./
 
       # 设置 Docker Buildx
       - name: Set up Docker Buildx
@@ -83,7 +83,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
-            JAR_FILE_PATH=./target/*.jar
+            JAR_FILE_PATH=./*.jar
 
       # 验证构建的镜像
       - name: Verify Docker image
