--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -190,6 +190,7 @@ jobs:
 
   build-and-push:
     runs-on: ubuntu-latest
+    needs: build-and-release  # 添加依赖关系
     permissions:
       contents: read
       packages: write
