fix(ci): 修复 Docker 镜像构建和推送的条件判断
- 修改了容器注册表登录的条件判断逻辑，确保在 push 事件或手动触发时都能执行
- 简化了 Docker 镜像标签策略，移除了复杂的标签类型配置
- 统一使用 github.ref_name 作为镜像标签，简化版本管理
- 移除了构建和推送 Docker 镜像步骤中的冗余配置

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -216,7 +216,8 @@ jobs:
 
       # 登录到 GitHub Container Registry
       - name: Log in to Container Registry
-        if: ${{ inputs.push_to_registry == true }}
+#        if: ${{ inputs.push_to_registry == true }}
+        if: ${{ github.event_name == 'push' || inputs.push_to_registry == true }}
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
@@ -230,11 +231,9 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=${{ github.ref_name }}
+            type=raw,value=latest
+
 
       # 构建并推送 Docker 镜像
       - name: Build and push Docker image
