--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -241,7 +241,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          push: ${{ inputs.push_to_registry == true }}
+          push: ${{ github.event_name == 'push' || inputs.push_to_registry == true }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
