--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -179,90 +179,75 @@ jobs:
           echo "解压后的文件:"
           ls -la extracted-jars
 
-      - name: 11.5 将 JAR 文件转换为 EXE
+      - name: 11.5 将 JAR 文件转换为 EXE（简单可靠版本）
         run: |
-          # 下载最新的 Launch4j（推荐使用跨平台的二进制版本，而不是 JAR）
-          # 但如果必须用 JAR 方式，这里保留并修复配置
-          wget https://sourceforge.net/projects/launch4j/files/launch4j-3/3.50/launch4j-3.50-linux-x86.tgz/download -O /tmp/launch4j.tgz
+          # 使用最稳定的方式下载 Launch4j 3.50 Linux x64 二进制版
+          # SourceForge 的 /download 后缀有时不稳定，使用重定向安全的 mirrors 链接
+          wget https://downloads.sourceforge.net/project/launch4j/launch4j-3/3.50/launch4j-3.50-linux-x64.tgz -O /tmp/launch4j.tgz
+
+          # 解压到 /tmp
           tar -xzf /tmp/launch4j.tgz -C /tmp
+
+          # 添加执行权限
           chmod +x /tmp/launch4j/launch4j
 
-          # 或者继续用 JAR 版（不推荐，下面以 JAR 为例修复配置）
-          # wget https://github.com/TheBoegl/launch4j/releases/download/3.14/launch4j-3.14.jar -O /tmp/launch4j.jar
-
+          # 遍历所有 JAR 文件
           for jar_file in extracted-jars/*.jar; do
             if [ -f "$jar_file" ]; then
               jar_name=$(basename "$jar_file" .jar)
+              exe_output="extracted-jars/${jar_name}.exe"
 
-              # 更稳健地提取 Main-Class
-              main_class=$(unzip -p "$jar_file" META-INF/MANIFEST.MF | grep "^Main-Class:" | sed 's/Main-Class: //' | tr -d '\r')
+              # 稳健提取 Main-Class（去除多余空格和回车）
+              main_class=$(unzip -p "$jar_file" META-INF/MANIFEST.MF | grep '^Main-Class:' | sed 's/^Main-Class: *//' | tr -d '\r')
 
               if [ -z "$main_class" ]; then
-                echo "⚠️ 无法从 $jar_file 中提取 Main-Class，跳过 EXE 生成"
+                echo "⚠️ $jar_file 中未找到 Main-Class，跳过生成 EXE"
                 continue
               fi
 
-              config_file="/tmp/${jar_name}_launch4j.xml"
-              exe_output="extracted-jars/${jar_name}.exe"
-
+              # 生成正确的 Launch4j 配置 XML
+              config_file="/tmp/${jar_name}_config.xml"
               cat > "$config_file" << EOF
           <launch4jConfig>
             <dontWrapJar>false</dontWrapJar>
-            <headerType>gui</headerType>  <!-- 如果是命令行工具，改为 console -->
+            <headerType>gui</headerType>    <!-- 如为控制台程序，改为 console -->
             <jar>$jar_file</jar>
             <outfile>$exe_output</outfile>
-            <errTitle>WsProxy Error</errTitle>
-            <cmdLine></cmdLine>
-            <chdir>.</chdir>
-            <priority>normal</priority>
-            <downloadUrl>https://adoptium.net/</downloadUrl>
-            <supportUrl></supportUrl>
-            <stayAlive>false</stayAlive>
-            <restartOnCrash>false</restartOnCrash>
-            <manifest></manifest>
-            <icon></icon>  <!-- 可选：指定 ico 文件路径 -->
-
             <classname>$main_class</classname>
-
             <jre>
-              <path></path>  <!-- 留空表示使用系统 JRE -->
-              <bundledJre64></bundledJre64>
-              <bundledJre32></bundledJre32>
               <minVersion>${{ env.JAVA_VERSION }}.0</minVersion>
-              <maxVersion></maxVersion>
               <jdkPreference>preferJre</jdkPreference>
             </jre>
-
             <versionInfo>
               <fileVersion>${TAG_NAME#v}.0.0.0</fileVersion>
               <txtFileVersion>${TAG_NAME}</txtFileVersion>
-              <fileDescription>WsProxy Application</fileDescription>
-              <copyright>Copyright (c) 2023-2026</copyright>
               <productVersion>${TAG_NAME#v}.0.0.0</productVersion>
               <txtProductVersion>${TAG_NAME}</txtProductVersion>
+              <fileDescription>WsProxy Application</fileDescription>
+              <copyright>Copyright (c) 2023</copyright>
               <productName>WsProxy</productName>
               <originalFilename>${jar_name}.exe</originalFilename>
             </versionInfo>
           </launch4jConfig>
           EOF
 
-              # 使用 Launch4j 处理（这里用 JAR 版示例）
-              java -jar /tmp/launch4j.jar "$config_file"
+              # 执行 Launch4j 生成 EXE
+              /tmp/launch4j/launch4j "$config_file"
 
-              # 如果你解压了二进制版，用下面这行代替上面：
-              # /tmp/launch4j/launch4j "$config_file"
-
+              # 检查结果
               if [ -f "$exe_output" ]; then
-                echo "✅ 成功创建 EXE: $exe_output"
+                echo "✅ 成功生成: $exe_output"
               else
-                echo "❌ 创建 EXE 失败: $jar_file"
-                cat "$config_file"  # 输出配置便于调试
+                echo "❌ 生成失败: $jar_file"
+                echo "=== 配置内容（用于调试）==="
+                cat "$config_file"
               fi
             fi
           done
 
-          echo "生成的 EXE 文件列表:"
-          ls -la extracted-jars/*.exe || echo "无 EXE 文件生成"
+          # 列出所有生成的 EXE
+          echo "=== 生成的 EXE 文件 ==="
+          ls -la extracted-jars/*.exe || echo "未生成任何 EXE 文件"
         shell: bash
 
       - name: 12.上传 ZIP 到 GitHub Release
