fix(build): 修复Launch4j配置中的headerType设置
- 将headerType从gui更改为console以正确生成控制台程序
- 修正了注释中的描述顺序使更清晰

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -209,7 +209,7 @@ jobs:
               cat > "$config_file" << EOF
           <launch4jConfig>
             <dontWrapJar>false</dontWrapJar>
-            <headerType>gui</headerType>    <!-- 如为控制台程序，改为 console -->
+            <headerType>console</headerType>    <!-- gui如为控制台程序，改为 console -->
             <jar>$jar_file</jar>
             <outfile>$exe_output</outfile>
             <classname>$main_class</classname>
