fix(build): 修正构建脚本中的目录切换路径
- 修复了launch4j解压后的目录切换逻辑
- 确保在正确的解压目录中执行后续命令
- 避免因路径错误导致的构建失败问题

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -187,7 +187,7 @@ jobs:
           # 解压到 /tmp
           tar -xzf /tmp/launch4j.tgz -C /tmp
           dir=$(pwd)
-          cd /tmp
+          cd /tmp/launch4j
           echo "解压后的文件:"
           ls
           cd $dir
