--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -179,53 +179,60 @@ jobs:
           echo "解压后的文件:"
           ls -la extracted-jars
 
-      - name: 11.5 将 JAR 文件转换为 EXE（简单可靠版本）
+      - name: 11.5 将 JAR 文件转换为 EXE（headless launch4j.jar 版本）
         run: |
-          # 使用最稳定的方式下载 Launch4j 3.50 Linux x64 二进制版
-          # SourceForge 的 /download 后缀有时不稳定，使用重定向安全的 mirrors 链接
-          wget https://pilotfiber.dl.sourceforge.net/project/launch4j/launch4j-3/3.50/launch4j-3.50-linux-x64.tgz?viasf=1 -O /tmp/launch4j.tgz
-          # 解压到 /tmp
+          # 可靠下载 Launch4j（带重试）
+          wget --tries=5 --timeout=60 \
+            https://pilotfiber.dl.sourceforge.net/project/launch4j/launch4j-3/3.50/launch4j-3.50-linux-x64.tgz?viasf=1 \
+            -O /tmp/launch4j.tgz || \
+          wget --tries=5 \
+            https://sourceforge.net/projects/launch4j/files/launch4j-3/3.50/launch4j-3.50-linux-x64.tgz/download \
+            -O /tmp/launch4j.tgz
+
           tar -xzf /tmp/launch4j.tgz -C /tmp
+
+          # 安装 mingw-w64（提供 windres 和 ld）
+          sudo apt-get update
+          sudo apt-get install -y mingw-w64
+
+          # 创建 Launch4j 所需的符号链接（x86_64-w64-mingw32- 前缀）
+          ln -sf /usr/bin/x86_64-w64-mingw32-windres /tmp/launch4j/bin/windres
+          ln -sf /usr/bin/x86_64-w64-mingw32-ld /tmp/launch4j/bin/ld
+
+          # 设置版本 fallback（可选）
+          VERSION=${TAG_NAME#v}
+          VERSION=${VERSION:-1.0.0}
+
           dir=$(pwd)
-          cd /tmp/launch4j
-          echo "解压后的文件:"
-          ls
-          cd $dir
-          # 添加执行权限
-          chmod +x /tmp/launch4j/launch4j
-          echo "完成权限赋予:"
-          # 遍历所有 JAR 文件
+          cd /tmp/launch4j && echo "解压文件列表:" && ls && cd "$dir"
+
           for jar_file in extracted-jars/*.jar; do
-            if [ -f "$jar_file" ]; then
-              jar_name=$(basename "$jar_file" .jar)
-              exe_output="extracted-jars/${jar_name}.exe"
+            [ -f "$jar_file" ] || continue
+            jar_name=$(basename "$jar_file" .jar)
+            exe_output="extracted-jars/${jar_name}.exe"
 
-              # 稳健提取 Main-Class（去除多余空格和回车）
-              main_class=$(unzip -p "$jar_file" META-INF/MANIFEST.MF | grep '^Main-Class:' | sed 's/^Main-Class: *//' | tr -d '\r')
+            main_class=$(unzip -p "$jar_file" META-INF/MANIFEST.MF | grep '^Main-Class:' | sed 's/^Main-Class: *//' | tr -d '\r')
 
-              if [ -z "$main_class" ]; then
-                echo "⚠️ $jar_file 中未找到 Main-Class，跳过生成 EXE"
-                continue
-              fi
+            [ -z "$main_class" ] && echo "⚠️ $jar_file 无 Main-Class，跳过" && continue
 
-              # 生成正确的 Launch4j 配置 XML
-              config_file="/tmp/${jar_name}_config.xml"
-              cat > "$config_file" << EOF
+            config_file="/tmp/${jar_name}_config.xml"
+            cat > "$config_file" << EOF
           <launch4jConfig>
             <dontWrapJar>false</dontWrapJar>
-            <headerType>console</headerType>    <!-- gui如为控制台程序，改为 console -->
+            <headerType>console</headerType>    <!-- WsProxy 如为 GUI 程序用 gui；如为控制台程序用 console -->
             <jar>$jar_file</jar>
             <outfile>$exe_output</outfile>
+            <errTitle>WsProxy Error</errTitle>
             <classname>$main_class</classname>
             <jre>
               <minVersion>${{ env.JAVA_VERSION }}.0</minVersion>
               <jdkPreference>preferJre</jdkPreference>
             </jre>
             <versionInfo>
-              <fileVersion>${TAG_NAME#v}.0.0.0</fileVersion>
-              <txtFileVersion>${TAG_NAME}</txtFileVersion>
-              <productVersion>${TAG_NAME#v}.0.0.0</productVersion>
-              <txtProductVersion>${TAG_NAME}</txtProductVersion>
+              <fileVersion>${VERSION}.0.0.0</fileVersion>
+              <txtFileVersion>${TAG_NAME:-v$VERSION}</txtFileVersion>
+              <productVersion>${VERSION}.0.0.0</productVersion>
+              <txtProductVersion>${TAG_NAME:-v$VERSION}</txtProductVersion>
               <fileDescription>WsProxy Application</fileDescription>
               <copyright>Copyright (c) 2023</copyright>
               <productName>WsProxy</productName>
@@ -233,24 +240,26 @@ jobs:
             </versionInfo>
           </launch4jConfig>
           EOF
-              echo "执行 Launch4j 生成 EXE"
-              # 执行 Launch4j 生成 EXE
-              /tmp/launch4j/launch4j "$config_file"
 
-              # 检查结果
-              if [ -f "$exe_output" ]; then
-                echo "✅ 成功生成: $exe_output"
-              else
-                echo "❌ 生成失败: $jar_file"
-                echo "=== 配置内容（用于调试）==="
-                cat "$config_file"
-              fi
+            echo "✅ 使用 headless 模式运行 launch4j.jar 生成 $exe_output"
+            java -Djava.awt.headless=true -jar /tmp/launch4j/launch4j.jar "$config_file"
+
+            if [ -f "$exe_output" ]; then
+              echo "✅ 成功生成: $exe_output"
+            else
+              echo "❌ 生成失败: $jar_file"
+              echo "=== 配置内容（调试）==="
+              cat "$config_file"
+              echo "=== Launch4j 日志（如果有）==="
+              cat /tmp/launch4j/launch4j.log 2>/dev/null || echo "无日志文件"
             fi
           done
 
-          # 列出所有生成的 EXE
           echo "=== 生成的 EXE 文件 ==="
-          ls -la extracted-jars/*.exe || echo "未生成任何 EXE 文件"
+          ls -la extracted-jars/*.exe || echo "未生成任何 EXE"
+
+          # 清理（可选）
+          rm -rf /tmp/launch4j /tmp/launch4j.tgz /tmp/*_config.xml
         shell: bash
 
       - name: 12.上传 ZIP 到 GitHub Release
