chore(build): 添加内部名称配置项
- 在 build.yml 配置中新增 internalName 属性
- 使用 JAR 基础名作为 EXE 文件的内部名称
- 保持与 originalFilename 的一致性配置

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -260,6 +260,7 @@ jobs:
               <fileDescription>WsProxy Application</fileDescription>
               <copyright>Copyright (c) 2023</copyright>
               <productName>WsProxy</productName>
+              <internalName>${jar_name}</internalName>    <!-- 新增：用 JAR 基础名（即 EXE 名无后缀） -->
               <originalFilename>${jar_name}.exe</originalFilename>
             </versionInfo>
           </launch4jConfig>
